# Rally-safety-organization-app

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SETUP.md  STATUS.md  project_plan.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
backend/: .env.example  main.py  requirements.txt
backend/api/: admin.py  audit.py  auth.py  status.py  websocket.py
backend/core/: auth.py  config.py  connection_manager.py  event_logger.py  people_catalog.py  rz_context.py  station_registry.py
backend/models/: auth.py  people.py  (+3 more)
data/: example-map-elements.geojson  example-track.geojson  people_catalog.example.json  people_catalog.json  pins.example.json  pins.json  rz_context.example.json  station-coordinates.json
frontend/: index.html
logs/: rz_session_20260215_152603.jsonl  rz_session_20260215_153115.jsonl  rz_session_20260215_153206.jsonl  rz_session_20260215_153426.jsonl  rz_session_20260215_153628.jsonl  rz_session_20260215_153829.jsonl  rz_session_20260215_162254.jsonl  rz_session_20260215_162520.jsonl  rz_session_20260215_162706.jsonl  rz_session_20260215_162942.jsonl  rz_session_20260221_145724.jsonl  rz_session_20260221_145751.jsonl  rz_session_20260221_150912.jsonl  rz_session_20260221_151919.jsonl  rz_session_20260221_152156.jsonl
scripts/: import_map_elements_from_kml.py  import_people_from_kml.py  import_station_positions_from_csv.py  serve_frontend.py
(+28 files in other folders)
